[metadata]
name = generator-helper
version = 0.1.0
description = A helper module for test case generation and validation
author = ericshen19555
author_email = ericshen19555@gmail.com

[options]
package_dir =
    = src
packages = find:
install_requires =
    func-timeout>=4.3.5
python_requires = >=3.8

[options.packages.find]
where = src
